refactor(common): delete pix

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -22,23 +22,9 @@
       - "mintreport"
       - "mintwelcome"
       - "network-manager-config-connectivity-ubuntu"
+      - "pix-data"
+      - "pix"
       - "xviewer"
-
-- import_tasks: "{{ helpers }}/mime.yml"
-  vars:
-    mime_facts:
-      entry_name: "pix"
-      type:
-        - "image/bmp"
-        - "image/gif"
-        - "image/jpeg"
-        - "image/png"
-        - "image/tiff"
-        - "image/webp"
-        - "image/x-bmp"
-        - "image/x-ico"
-        - "image/x-pcx"
-  tags: "mime"
 
 - import_tasks: "{{ helpers }}/gitignore.yml"
   tags: "gitignore_common"
