refactor(vscodium): update settings

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -64,6 +64,7 @@
   "editor.copyWithSyntaxHighlighting": false,
   "editor.cursorBlinking": "phase",
   "editor.cursorSurroundingLines": 4,
+  "editor.cursorWidth": 2,
   "editor.foldingStrategy": "indentation",
   "editor.fontFamily": "{{ user_font }}, monospace",
   "editor.fontLigatures": true,
@@ -72,6 +73,7 @@
   "editor.glyphMargin": false,
   "editor.lineHeight": 26,
   "editor.lineNumbers": "off",
+  "editor.matchBrackets": "near",
   "editor.minimap.enabled": false,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.occurrencesHighlight": false,
