refactor(vscodium): add bracket-pair-colorizer-2 & update settings

--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -1,7 +1,7 @@
 vscodium_config_path: "{{ user_config }}/VSCodium/User"
 
 vscodium_extensions:
-  - "coenraads.bracket-pair-colorizer"
+  - "coenraads.bracket-pair-colorizer-2"
   - "dbaeumer.vscode-eslint"
   - "dotjoshjohnson.xml"
   - "dracula-theme.theme-dracula"
