--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -9,7 +9,7 @@
     latest_release_facts:
       owner: "be5invis"
       repo: "iosevka"
-      pattern: "(ss08)"
+      pattern: "^((?!fixed).)*ss08"
   tags:
     - "latest_release_font"
     - "update_font"
