improvement(vscodium): disable codelens.npmScripts

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -49,6 +49,7 @@
     "repo"
   ],
   "css.validate": false,
+  "debug.javascript.codelens.npmScripts": "never",
   "editor.accessibilitySupport": "off",
   "editor.autoClosingQuotes": "always",
   "editor.codeActionsOnSave": {
