fix(virtualbox): update package version and repo path

--- a/roles/virtualbox/tasks/main.yml
+++ b/roles/virtualbox/tasks/main.yml
@@ -6,12 +6,12 @@
 - import_tasks: "{{ helpers }}/repo.yml"
   vars:
     repo_facts:
-      - repo: "deb https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib"
+      - repo: "deb [arch=amd64] https://download.virtualbox.org/virtualbox/debian {{ ubuntu_codename }} contrib"
 
 - import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
     package_apt_add_facts:
-      - "virtualbox-6.0"
+      - "virtualbox-6.1"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
