--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -1,5 +1,11 @@
 vscodium_config_path: "{{ user_config }}/VSCodium/User"
 
+vscodium_extensions_gallery:
+  - key: '    "itemUrl": '
+    value: '"https://marketplace.visualstudio.com/items"'
+  - key: '    "serviceUrl": '
+    value: '"https://marketplace.visualstudio.com/_apis/public/gallery",'
+
 vscodium_extensions:
   - "coenraads.bracket-pair-colorizer-2"
   - "dbaeumer.vscode-eslint"
