--- a/roles/chromium/tasks/main.yml
+++ b/roles/chromium/tasks/main.yml
@@ -1,7 +1,21 @@
+- import_tasks: "{{ helpers }}/key.yml"
+  vars:
+    key_facts:
+      - "https://download.opensuse.org/repositories/home:ungoogled_chromium/Ubuntu_Focal/Release.key"
+  tags: "key_chromium"
+
+- import_tasks: "{{ helpers }}/repo.yml"
+  vars:
+    repo_facts:
+      - repo: "deb https://download.opensuse.org/repositories/home:/ungoogled_chromium/Ubuntu_Focal/ /"
+        filename: "home:ungoogled_chromium.list"
+  tags: "repo_chromium"
+
 - import_tasks: "{{ helpers }}/package_apt_add.yml"
   vars:
     package_apt_add_facts:
-      - "chromium-browser"
+      - "ungoogled-chromium"
+  tags: "package_apt_add_chromium"
 
 - import_tasks: "{{ helpers }}/template.yml"
   vars:
