refactor(common): remove warpinator

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -24,6 +24,7 @@
       - "network-manager-config-connectivity-ubuntu"
       - "pix-data"
       - "pix"
+      - "warpinator"
       - "xviewer"
 
 - import_tasks: "{{ helpers }}/gitignore.yml"
