refactor(keepassxc): update config & add cache file

--- a/roles/keepassxc/tasks/main.yml
+++ b/roles/keepassxc/tasks/main.yml
@@ -13,6 +13,9 @@
     template_facts:
       - src: "keepassxc.ini"
         dest: "{{ user_config }}/keepassxc"
+      - src: "cache.ini"
+        dest: "{{ user_home}}/.cache/keepassxc"
+        filename: "keepassxc.ini"
         data:
           filename: "psst.kdbx"
   tags: "template_keepassxc"
