--- a/roles/keepassxc/templates/keepassxc.ini
+++ b/roles/keepassxc/templates/keepassxc.ini
@@ -7,11 +7,10 @@ AutoTypeEntryTitleMatch=true
 AutoTypeEntryURLMatch=true
 AutoTypeStartDelay=200
 BackupBeforeSave=false
+ConfigVersion=1
 GlobalAutoTypeKey=0
 GlobalAutoTypeModifiers=0
 IgnoreGroupExpansion=true
-LastDatabases={{ sync_directory }}/{{ data.filename }}
-LastDir={{ sync_directory }}
 MinimizeOnCopy=false
 OpenPreviousDatabasesOnStartup=true
 RememberLastDatabases=true
@@ -24,24 +23,19 @@ UseAtomicSaves=true
 UseGroupIconOnEntryCreation=true
 
 [GUI]
+CheckForUpdates=false
 DarkTrayIcon=false
-DetailSplitterState=201, 295
 HideDetailsView=false
 HidePasswords=true
 HideUsernames=false
-Language=system
-ListViewState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\r\xf9\x1f\0\0\0\v\0\0\0\x5\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\n\0\0\0\x18\0\0\0\v\0\0\0\0\0\0\0\f\0\0\0\xe3\0\0\0\0\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\x2\xab\0\0\0\r\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0\x18\0\0\0\x81\0\0\0\0\0\0\0\r\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1V\0\0\0\x1\0\0\0\0\0\0\x1U\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\xff\xff\xff\xff)
-MainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x1\x31\0\0\0\xc2\0\0\x4\xaa\0\0\x3\v\0\0\x1\x31\0\0\0\xde\0\0\x4\xaa\0\0\x3\v\0\0\0\0\0\0\0\0\a\x80)
 MinimizeOnClose=false
 MinimizeOnStartup=false
 MinimizeToTray=false
-SearchViewState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\r\xf8\x1f\0\0\0\n\0\0\0\n\0\0\0\x18\0\0\0\v\0\0\0\0\0\0\0\b\0\0\0\x64\0\0\0\t\0\0\0\x64\0\0\0\f\0\0\0\xaa\0\0\0\x3\0\0\0\x64\0\0\0\x6\0\0\0\x64\0\0\0\a\0\0\0\x64\0\0\0\x4\0\0\0\x64\0\0\0\x5\0\0\0\x64\0\0\x2\x9e\0\0\0\r\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\0\0\0\x18\0\0\0\x81\0\0\0\0\0\0\0\r\0\0\0\xe0\0\0\0\x1\0\0\0\0\0\0\0\xdf\0\0\0\x1\0\0\0\0\0\0\0\xdf\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\x1\xff\xff\xff\xff)
 ShowTrayIcon=false
-SplitterState=181, 685
 
-[security]
-clearclipboard=true
-clearclipboardtimeout=10
-lockdatabaseidle=true
-lockdatabaseidlesec=240
-lockdatabasescreenlock=true
+[Security]
+ClearClipboardTimeout=10
+ClearSearchTimeout=4
+LockDatabaseIdle=true
+LockDatabaseIdleSeconds=224
+LockDatabaseMinimize=true
