--- a/roles/redshift/files/redshift.conf
+++ b/roles/redshift/files/redshift.conf
@@ -1,7 +1,7 @@
 [redshift]
 temp-day=6500
 temp-night=4500
-transition=1
+fade=1
 brightness-day=0.7
 brightness-night=0.5
 location-provider=manual
