refactor(rhythmbox): delete rhythmbox

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -25,6 +25,8 @@
       - "network-manager-config-connectivity-ubuntu"
       - "pix-data"
       - "pix"
+      - "rhythmbox-data"
+      - "rhythmbox"
       - "warpinator"
       - "xviewer"
 
