refactor(simplescreenrecorder): update settings

--- a/roles/simplescreenrecorder/templates/settings.conf
+++ b/roles/simplescreenrecorder/templates/settings.conf
@@ -6,7 +6,7 @@ nvidia_disable_flipping=yes
 audio_enabled=false
 profile=main
 video_area_screen=0
-video_area=cursor
+video_area=fixed
 video_frame_rate=60
 video_h=480
 video_record_cursor=true
