refactor(torbrowser): move torbrowser task to firefox role

--- a/roles/firefox/tasks/main.yml
+++ b/roles/firefox/tasks/main.yml
@@ -19,6 +19,7 @@
   vars:
     package_apt_add_facts:
       - "firefox"
+      - "torbrowser-launcher"
 
 - import_tasks: "{{ helpers }}/package_apt_remove.yml"
   vars:
