--- a/roles/qbittorrent/templates/qBittorrent.conf
+++ b/roles/qbittorrent/templates/qBittorrent.conf
@@ -1,12 +1,40 @@
 [Application]
 FileLogger\Enabled=false
 
+[BitTorrent]
+Session\DisableAutoTMMByDefault=false
+
+[GUI]
+Notifications\Enabled=false
+
 [LegalNotice]
 Accepted=true
 
+[MainWindow]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xf7\0\0\0\xa8\0\0\a\x17\0\0\x2\xf3\0\0\x1\xf7\0\0\0\xc1\0\0\a\x17\0\0\x2\xf3\0\0\0\0\0\0\0\0\a\x80\0\0\x1\xf7\0\0\0\xc1\0\0\a\x17\0\0\x2\xf3)
+qt5\vsplitterState=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xaa\0\0\x4u\x1\xff\xff\xff\xff\x1\0\0\0\x1\0)
+
 [Preferences]
+Advanced\AnonymousMode=true
 Advanced\confirmTorrentDeletion=false
 Downloads\SavePath={{ data.download_dir }}
 General\CloseToTray=false
 General\ExitConfirm=false
+General\SpeedInTitleBar=true
 General\SystrayEnabled=false
+General\ToolbarDisplayed=false
+General\UseRandomPort=true
+Queueing\MaxActiveDownloads=10
+Queueing\MaxActiveTorrents=10
+Queueing\MaxActiveUploads=10
+
+[Toolbar]
+textPosition=0
+
+[TransferList]
+qt5\HeaderState=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\x1\x1\0\0\0\0\0\0\0\0\0\0\0\x1f\t\xf0\xff\x7f\0\0\0\x15\0\0\0\xf\0\0\0\x64\0\0\0\f\0\0\0\x64\0\0\0\r\0\0\0\x64\0\0\0\x12\0\0\0\x64\0\0\0\x13\0\0\0\x64\0\0\0\x10\0\0\0\x64\0\0\0\x11\0\0\0\x64\0\0\0\x16\0\0\0\x64\0\0\0\x17\0\0\0\x64\0\0\0\x14\0\0\0\x64\0\0\0\x15\0\0\0\x64\0\0\0\x1a\0\0\0\x64\0\0\0\x1b\0\0\0\x64\0\0\0\x18\0\0\0\x64\0\0\0\x19\0\0\0\x64\0\0\0\x1e\0\0\0\x64\0\0\0\x1c\0\0\0\x64\0\0\0\x1d\0\0\0\x64\0\0\0\x3\0\0\0\x64\0\0\0\0\0\0\0\x36\0\0\0\xe\0\0\0\x64\0\0\x4Y\0\0\0\x1f\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x1f\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x1\x97\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\x64\0\0\0\x1\0\0\0\0\0\0\0P\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0\x46\0\0\0\x1\0\0\0\0\0\0\0^\0\0\0\x1\0\0\0\0\0\0\0X\0\0\0\x1\0\0\0\0\0\0\0\x36\0\0\0\x1\0\0\0\0\0\0\0\x39\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\0\0\0\x64)
+
+[TransferListFilters]
+CategoryFilterState=false
+TagFilterState=false
+trackerFilterState=false
