refactor(common): update uninstall list

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -27,6 +27,8 @@
       - "pix"
       - "rhythmbox-data"
       - "rhythmbox"
+      - "transmission-common"
+      - "transmission-gtk"
       - "warpinator"
       - "xviewer"
 
