refactor(helper): disable npm postinstall scripts

--- a/helpers/package_npm.yml
+++ b/helpers/package_npm.yml
@@ -10,6 +10,7 @@
     name: "{{ item }}"
     state: latest
     global: True
+    ignore_scripts: True
   environment:
     PATH: "{{ node_path.stdout | dirname }}"
   register: npm_install_result
