refactor(ansible-config): update formatting of "ansible_managed" template

--- a/roles/rsnapshot/templates/rsnapshot.conf
+++ b/roles/rsnapshot/templates/rsnapshot.conf
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}
+# {{ ansible_managed }}{{ role_name }}
 config_version	1.2
 snapshot_root	{{ user_storage_ext }}/bcp/
 cmd_cp	/bin/cp
