--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-ansible_managed = "- DO NOT EDIT - see template: {file}"
+ansible_managed = "- DO NOT EDIT - see template in "
 callback_whitelist = profile_roles, profile_tasks, timer
 duplicate_dict_key = True
 inventory = hosts.yml
