--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -56,6 +56,7 @@
     "source.fixAll.eslint": true,
     "source.organizeImports": true
   },
+  "editor.codeLens": false,
   "editor.colorDecorators": false,
   "editor.copyWithSyntaxHighlighting": false,
   "editor.cursorBlinking": "phase",
