--- a/vars.yml
+++ b/vars.yml
@@ -3,6 +3,9 @@ sync_directory: "{{ user_storage }}/sync"
 ubuntu_codename: "{{ lookup('ini', 'UBUNTU_CODENAME type=properties file=/etc/os-release') }}"
 user_config: "{{ user_home }}/.config"
 user_default_editor: "codium"
+user_devices:
+  - "/dev/sda3"
+  - "/dev/sdb1"
 user_font_interface: "Roboto"
 user_font_monospace: "Iosevka Term SS08"
 user_font_serif: "Roboto Slab"
