--- a/roles/firefox/defaults/main.yml
+++ b/roles/firefox/defaults/main.yml
@@ -2,11 +2,12 @@ firefox_profile_name: "{{ ansible_user_id }}"
 
 firefox_config_dir: "{{ user_home }}/.mozilla/firefox"
 
+tor_browser_dir: "{{ user_home }}/.local/share/"
+
 tor_browser_config_dir: |-
   {{
-    '~/.local/share/torbrowser/tbb/x86_64/' +
-    'tor-browser_en-US/Browser/' +
-    'TorBrowser/Data/Browser/profile.default'
+    tor_browser_dir ~
+    'torbrowser/Browser/TorBrowser/Data/Browser/profile.default'
   }}
 
 librefox_config:
