feat(quiterss): add quiterss role

--- a/playbook.yml
+++ b/playbook.yml
@@ -46,6 +46,7 @@
     - oh_my_zsh
     - optimization
     - qbittorrent
+    - quiterss
     - redshift
     - rsnapshot
     - simplescreenrecorder
