refactor(quiterss): update config

--- a/roles/quiterss/files/QuiteRss.ini
+++ b/roles/quiterss/files/QuiteRss.ini
@@ -1,5 +1,6 @@
 [General]
 GeometryState=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x1\xc3\0\0\0\x44\0\0\x6\xfe\0\0\x3O\0\0\x1\xc3\0\0\0]\0\0\x6\xfe\0\0\x3O\0\0\0\0\0\0\0\0\a\x80\0\0\x1\xc3\0\0\0]\0\0\x6\xfe\0\0\x3O)
+MainSplitterState=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xf8\0\0\x4\x43\0\0\0\0\x1\x1\0\0\0\x1\0)
 NewsTabSplitterState=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\x1\v\0\0\x1\xb2\x1\0\0\0\x1\x1\0\0\0\x2\0)
 
 [NewsHeader]
@@ -8,6 +9,10 @@ state=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\x1\0\0\0\a\x1\0\0\0!\0\0\0\0\
 
 [newsSettings]
 filterName=filterNewsUnread_
+
+[Shortcuts]
+copyLinkAct=Ctrl+C
+markFeedRead=Ctrl+R
 
 [Settings]
 alternatingColorsNews=true
@@ -18,7 +23,9 @@ feedsToolbarShow2=false
 indentationFeedsTree=false
 newsFontSize=11
 newsToolbarShow=false
-openingFeedAction=1
+openingFeedAction=2
+openLinkInBackground=false
+openLinkInBackgroundEmbedded=false
 reopenFeedStartup=false
 saveCookies=2
 showNotifyOn=false
