--- a/helpers/package_npm.yml
+++ b/helpers/package_npm.yml
@@ -1,20 +1,20 @@
-- name: helper | package_npm | get node executable path
+- name: 'helper | package_npm | get node executable path'
   command: '{{ ansible_user_shell }} -c "source ~/.nvm/nvm.sh; which node"'
   args:
-    removes: "{{ user_home }}/.nvm"
-  register: node_path
+    removes: '{{ user_home }}/.nvm'
+  register: 'node_path'
   changed_when: False
 
-- name: helper | package_npm | install package
+- name: 'helper | package_npm | install package'
   npm:
-    name: "{{ item }}"
-    state: latest
+    name: '{{ item }}'
+    state: 'latest'
     global: True
     ignore_scripts: True
   environment:
-    PATH: "{{ node_path.stdout | dirname }}"
-  register: npm_install_result
-  until: not npm_install_result.failed
+    PATH: '{{ node_path.stdout | dirname }}'
+  register: 'npm_install_result'
+  until: 'not npm_install_result.failed'
   retries: 10
   delay: 10
-  loop: "{{ q('items', package_npm_facts.install) }}"
+  loop: '{{ q("items", package_npm_facts.install) }}'
