--- a/helpers/key.yml
+++ b/helpers/key.yml
@@ -1,9 +1,9 @@
-- name: helper | key | add key
+- name: 'helper | key | add key'
   become: True
   apt_key:
-    url: "{{ item }}"
-  register: apt_key_result
-  until: not apt_key_result.failed
+    url: '{{ item }}'
+  register: 'apt_key_result'
+  until: 'not apt_key_result.failed'
   retries: 10
   delay: 10
-  loop: "{{ key_facts }}"
+  loop: '{{ key_facts }}'
