--- a/helpers/launcher.yml
+++ b/helpers/launcher.yml
@@ -1,18 +1,18 @@
-- name: helper | launcher | create task variables
+- name: 'helper | launcher | create task variables'
   set_fact:
-    startup_dir: "{{ user_config }}/autostart"
-    launcher_dir: "{{ user_home }}/.local/share/applications"
+    startup_dir: '{{ user_config }}/autostart'
+    launcher_dir: '{{ user_home }}/.local/share/applications'
 
-- import_tasks: "{{ helpers }}/dir_create.yml"
+- import_tasks: '{{ helpers }}/dir_create.yml'
   vars:
     dir_create_facts:
       - path:
-          - "{{ startup_dir }}"
-          - "{{ launcher_dir }}"
+          - '{{ startup_dir }}'
+          - '{{ launcher_dir }}'
 
-- name: helper | launcher | create file and content
+- name: 'helper | launcher | create file and content'
   copy:
-    content: "{{ lookup('template', 'launcher') }}"
+    content: '{{ lookup("template", "launcher") }}'
     dest: |-
       {{
         (item.startup is defined)
@@ -21,9 +21,9 @@
         item.name
         ~ '.desktop'
       }}
-  loop: "{{ launcher_facts }}"
+  loop: '{{ launcher_facts }}'
 
-- name: helper | launcher | make executable
+- name: 'helper | launcher | make executable'
   file:
     path: |-
       {{
@@ -33,6 +33,6 @@
         item.name
         ~ '.desktop'
       }}
-    state: touch
-    mode: "u+x,g+x"
-  loop: "{{ launcher_facts }}"
+    state: 'touch'
+    mode: 'u+x,g+x'
+  loop: '{{ launcher_facts }}'
