--- a/helpers/mime.yml
+++ b/helpers/mime.yml
@@ -1,31 +1,31 @@
-- name: helper | mime | create task variables
+- name: 'helper | mime | create task variables'
   set_fact:
-    mime_file: "{{ user_config }}/mimeapps.list"
-    temp_file: "/tmp/{{ inventory_hostname + ansible_date_time.date}}"
+    mime_file: '{{ user_config }}/mimeapps.list'
+    temp_file: '/tmp/{{ inventory_hostname + ansible_date_time.date}}'
 
-- name: helper | mime | create temp file and section header
+- name: 'helper | mime | create temp file and section header'
   copy:
     content: |
       [Default Applications]
 
       [Added Associations]
-    dest: "{{ temp_file }}"
-  when: temp_file is not file
+    dest: '{{ temp_file }}'
+  when: 'temp_file is not file'
 
-- name: helper | mime | add text block
+- name: 'helper | mime | add text block'
   blockinfile:
-    path: "{{ temp_file }}"
-    marker: "# {mark} role: {{ role_name | upper }} for {{ item }}"
+    path: '{{ temp_file }}'
+    marker: '# {mark} role: {{ role_name | upper }} for {{ item }}'
     insertafter: '\[{{ item }}\]'
     block: |
       {% for item in mime_facts.type -%}
         {{ item }}={{ mime_facts.entry_name }}.desktop
       {% endfor %}
   loop:
-    - "Default Applications"
-    - "Added Associations"
+    - 'Default Applications'
+    - 'Added Associations'
 
-- name: helper | mime | create final file
+- name: 'helper | mime | create final file'
   copy:
-    src: "{{ temp_file }}"
-    dest: "{{ mime_file }}"
+    src: '{{ temp_file }}'
+    dest: '{{ mime_file }}'
